<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_india">Delhi is the capital of India.</string>
    <string name="question_oceans">The Pacific Ocean is larger than Atlantic Ocean.</string>
    <string name="question_africa">The source of Nile River is in Eqypt.</string>
    <string name="question_continent">Asia is the largest continent.</string>
    <string name="question_capital">Capital of Washington is Seattle.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="submit_button">Submit Quiz</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong. </string>
    <string name="adView">Ad Google</string>
</resources>
